--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         </title>
     </head>
     <body>
+        <h1 style="color: burlywood;"> Welcome to the page </h1>
+        <br>
         hello!
         <br>
         world
