--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <body>
         <h1 style="color: burlywood;"> Welcome to the page </h1>
         <br>
-        hello!
-        <br>
-        world
+        hello world!
     </body>
 </html>
