Added about.html and link to about.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1 style="color: burlywood;"> Welcome to the page </h1>
         <br>
         hello world!
+        <br>
+        <a href="about.html">About me!</a>
     </body>
 </html>
