--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <h1 style="color: burlywood;"> Welcome to the page </h1>
+        <h1 style="color:  blue;"> Welcome to the page </h1>
         <br>
         hello world!
         <br>
