--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         hello world!
         <br>
         <a href="about.html">About me!</a>
+        <br>
+        <p>Testing Testing &#128512</p>
     </body>
 </html>
