--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         hello world!
         <br>
         <a href="about.html">About me!</a>
+        <a href="test.html">tvtest</a>
         <br>
         <p>Testing Testing &#128512</p>
+        <img src="images/scatman.jpg" alt="scatman">
+        <img src="images/greenday.jpg" alt="greenday">
     </body>
 </html>
