--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-            about me!
+            Test
         </title>
     </head>
     <body>
-        <img src="images/american_idiot.png" alt="american_idiot">
+        <img src="images/tvtest.png" alt="tvtest" style="width:800px;">
     </body>
 </html>
