--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br>
         <a href="about.html">About me!</a>
         <a href="test.html">tvtest</a>
-        <a href="table.html">Table</a>
+        <a href="table.html">Tables!</a>
         <br>
         <p>Testing Testing &#128512</p>
         <img src="images/scatman.jpg" alt="scatman">
