--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <a href="index.html">Home</a>
         <img src="images/american_idiot.png" alt="american_idiot">
     </body>
 </html>
