--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <a href="index.html">Home</a>
         <table border="10">
             <tr>
                 <th>Id</th>
