--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <a href="index.html">Home</a>
         <img src="images/tvtest.png" alt="tvtest" style="width:800px;">
     </body>
 </html>
