Added link and removed tvtest page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         hello world!
         <br>
         <a href="about.html">About me!</a>
-        <a href="test.html">tvtest</a>
+        <a href="images/tvtest.png">tvtest</a>
         <a href="table.html">Tables!</a>
+        <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a>
         <br>
         <p>Testing Testing &#128512</p>
         <img src="images/scatman.jpg" alt="scatman">
