--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <p>Testing Testing &#128512</p>
         <img src="images/scatman.jpg" alt="scatman">
         <img src="images/greenday.jpg" alt="greenday">
+        <br>
+        <p style="color: mediumpurple;">This is a test. Do you believe in life after love?</p>
     </body>
 </html>
