--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="about.html">About me!</a>
         <a href="images/tvtest.png">tvtest</a>
         <a href="table.html">Tables!</a>
+        <a href="list.html"> Lists</a>
         <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a>
         <br>
         <p>Testing Testing &#128512</p>
