--- a/list.html
+++ b/list.html
@@ -34,5 +34,15 @@
                 <dd>Hello4</dd>
             </dl>
         </fieldset>
+        <br><br><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo error beatae, laborum libero qui eligendi accusamus harum, ex similique, temporibus eius assumenda blanditiis! Architecto sit possimus culpa expedita quis.</p>
+        <p>This is also a <span style="font-size: xx-large; color: blue; font-variant: small-caps;">paragraph</span></p>
+        <span>This is a Span in HTML!</span>
+        <span>Span 2 electric boogaloo</span>
+        <br>
+        <span>WOOOOOOOOOOOOOOOOOOOOOW</span>
+        <div>This is a div inside of HTML!</div>
+        <div>Div 3 i dont know what to put here</div>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0dvr167Klgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
