--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>Testing Testing &#128512</p>
         <img src="images/scatman.jpg" alt="scatman">
         <img src="images/greenday.jpg" alt="greenday">
+        <img src="images/shutterstock-1.jpg" alt="weird">
         <br>
         <p style="color: mediumpurple;">This is a test. Do you believe in life after love?</p>
         <p>Branched Words! and even more words!</p>
