updated index with more words

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <br>
         <p style="color: mediumpurple;">This is a test. Do you believe in life after love?</p>
         <p>Branched Words! and even more words!</p>
+        <p>This change is on the main branch!</p>
     </body>
 </html>
